--- a/WebLibrary.Model/efpt.config.json
+++ b/WebLibrary.Model/efpt.config.json
@@ -1,6 +1,6 @@
 ﻿{
    "CodeGenerationMode": 2,
-   "ContextClassName": "ControleemprestimolivroContext",
+   "ContextClassName": "Context",
    "ContextNamespace": null,
    "DefaultDacpacSchema": null,
    "FilterSchemas": false,
@@ -26,7 +26,7 @@
          "ObjectType": 0
       }
    ],
-   "UiHint": "DESKTOP-JDE8Q70\\SQLEXPRESS.ControleEmprestimoLivro",
+   "UiHint": "DESKTOP-9UMSEK5\\SQLEXPRESS.ControleEmprestimoLivro",
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
    "UseDbContextSplitting": false,
