--- a/WebLibrary.Model/efpt.config.json
+++ b/WebLibrary.Model/efpt.config.json
@@ -26,7 +26,7 @@
          "ObjectType": 0
       }
    ],
-   "UiHint": "DESKTOP-9UMSEK5\\SQLEXPRESS.ControleEmprestimoLivro",
+   "UiHint": "DESKTOP-JDE8Q70\\SQLEXPRESS.ControleEmprestimoLivro",
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
    "UseDbContextSplitting": false,
